Fix simple mind map text overlap

--- a/styles.css
+++ b/styles.css
@@ -2031,8 +2031,8 @@ button:disabled {
   width: 100%;
 }
 
-.mindmap-canvas .smm-mind-map-container,
-.mindmap-canvas svg {
+.mindmap-canvas.smm-mind-map-container,
+.mindmap-canvas > svg {
   height: 100%;
   width: 100%;
 }
